welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: value % is not a member of java.awt.Color
      var color = (T(c+decalage)%i)
                                ^Array2:41: error: value % is not a member of java.awt.Color
      var color = (T(c+decalage)%i)
                                ^